hphp/test/vm/clsmethod-ctx.php.exp
Private in a
HipHop Fatal error: Call to private method a::priv from anonymous context in hphp/test/vm/clsmethod-ctx.php on line 15
